added new gateway machines, apache servers (not yet configured), and name resolution

--- a/ipsec/lab.conf
+++ b/ipsec/lab.conf
@@ -3,7 +3,7 @@ LAB_DESCRIPTION="IPSec PSK (PreSharedKey) Tunnel"
 LAB_VERSION="ipsec-psk.2022-23.rc2"
 LAB_AUTHOR="Peter Norris"
 LAB_EMAIL="pn@warwick.ac.uk"
-LAB_MACHINES=a,b,rA,rB,internet
+LAB_MACHINES=a,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA
 ##############################################
 a[0]=lanA
 
@@ -14,6 +14,7 @@ rA[2]=ispA
 internet[10]=ispA
 internet[11]=ispB
 internet[20]=tap,192.168.0.1,192.168.0.2
+internet[30]=ispC
 internet[mem]=512
 
 rB[2]=ispB
@@ -21,6 +22,23 @@ rB[mem]=512
 rB[1]=lanB
 
 b[0]=lanB
+
+gw1[0]=ispC
+gw1[1]=lanC
+
+gw2[0]=ispC
+gw2[1]=lanC
+
+apache[0]=ispC
+
+apacheLAN[0]=lanC
+
+CA[0]=lanC
+
+
+
+
+
 
 ###############################################################
 # corresponding network diagram
