Implemented DNS machine + working on Apache server

--- a/ipsec/lab.conf
+++ b/ipsec/lab.conf
@@ -3,7 +3,7 @@ LAB_DESCRIPTION="IPSec PSK (PreSharedKey) Tunnel"
 LAB_VERSION="ipsec-psk.2022-23.rc2"
 LAB_AUTHOR="Peter Norris"
 LAB_EMAIL="pn@warwick.ac.uk"
-LAB_MACHINES=a,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA
+LAB_MACHINES=a,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA,publicDNS
 ##############################################
 a[0]=lanA
 
@@ -11,6 +11,9 @@ rA[1]=lanA
 rA[mem]=512
 rA[2]=ispA
 
+publicDNS[0]=ispD
+
+internet[9]=ispD
 internet[10]=ispA
 internet[11]=ispB
 internet[20]=tap,192.168.0.1,192.168.0.2
