Both Apache servers are https with working SSL certs

--- a/ipsec/apacheLAN/etc/apache2/sites-available/office_quebec2_cyber_test.conf
+++ b/ipsec/apacheLAN/etc/apache2/sites-available/office_quebec2_cyber_test.conf
@@ -1,19 +1,17 @@
 <VirtualHost *:80>
-	ServerName quebec2.cyber.test
-	ServerAlias www.quebec2.cyber.test
-	Redirect / https://www.quebec2.cyber.test/
+	ServerName office.quebec2.cyber.test
+	Redirect / https://office.quebec2.cyber.test/
 </VirtualHost>
 
 <IfModule mod_ssl.c>
 <VirtualHost _default_:443>
-	ServerName quebec2.cyber.test
-	ServerAlias www.quebec2.cyber.test
-	DocumentRoot /var/www/quebec2_cyber_test
+	ServerName office.quebec2.cyber.test
+	DocumentRoot /var/www/office_quebec2_cyber_test
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	SSLEngine on
-	SSLCertificateFile /etc/certificate/publickey.cer
-	SSLCertificateKeyFile /etc/certificate/quebec2.key
+	SSLCertificateFile /etc/certificate/office_publickey.cer
+	SSLCertificateKeyFile /etc/certificate/office_quebec2.key
 	<FilesMatch "\.(cgi|shtml|phtml|php)$">
 	SSLOptions +StdEnvVars
 	</FilesMatch>
