--- a/ipsec/lab.conf
+++ b/ipsec/lab.conf
@@ -3,7 +3,7 @@ LAB_DESCRIPTION="IPSec PSK (PreSharedKey) Tunnel"
 LAB_VERSION="ipsec-psk.2022-23.rc2"
 LAB_AUTHOR="Peter Norris"
 LAB_EMAIL="pn@warwick.ac.uk"
-LAB_MACHINES=a,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA,publicDNS
+LAB_MACHINES=a,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA,publicDNS,officeDNS
 ##############################################
 a[0]=lanA
 
@@ -21,7 +21,7 @@ internet[30]=ispC
 internet[mem]=512
 
 rB[2]=ispB
-rB[mem]=512
+rB[mem]=128
 rB[1]=lanB
 
 b[0]=lanB
@@ -38,13 +38,13 @@ apacheLAN[0]=lanC
 
 CA[0]=lanC
 
-
+officeDNS[0]=lanC
 
 
 
 
 ###############################################################
-# corresponding network diagram
+# OLD corresponding network diagram
 #                                                        
 #                       ......................................
 #                      (:)         (crypto tunnel)          (:)
