--- a/ipsec/lab.conf
+++ b/ipsec/lab.conf
@@ -3,12 +3,9 @@ LAB_DESCRIPTION="IPSec PSK (PreSharedKey) Tunnel"
 LAB_VERSION="ipsec-psk.2022-23.rc2"
 LAB_AUTHOR="Peter Norris"
 LAB_EMAIL="pn@warwick.ac.uk"
-<<<<<<< HEAD
-LAB_MACHINES=a,a1,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA
-=======
-LAB_MACHINES=a,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA,publicDNS,officeDNS
->>>>>>> dd03ecc739f79d5522dc6c9d927e1433fa45f372
+LAB_MACHINES=a,a1,b,rA,rB,internet,gw1,gw2,apache,apacheLAN,CA,publicDNS,officeDNS
 ##############################################
+
 a[0]=lanA
 a1[0]=lanA
 
